manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "82240941"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: "82240941"
          image: ceappacr.azurecr.io/82240941:latest
          command: ['java', '-jar', '/app.jar']
          args: ['--spring.config.location=file:/config/application.yml']
          volumeMounts:
            - mountPath: /mnt/cloud-sample
              name: "82240941-volume"
              readOnly: false
              subPath: cloud-sample
            - mountPath: /config
              name: application-properties
              readOnly: true

      volumes:
        - name: "82240941-volume"
          persistentVolumeClaim:
            claimName: ce-aa-pvc
        - name: application-properties
          configMap:
            name: "82240941-configmap"
            items:
              - key: application.yml
                path: application.yml
            defaultMode: 420
