manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82240941-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
    - host: 82240941.ce-aa.kubepia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: my-82240941
                port:
                  number: 8080
            pathType: Prefix
